# FirstYear-4003CEM-Object-oriented-programming

week-1---cplusplus-intro/: .gitignore  CMakeLists.txt  README.md  a.out  input.h  lab_age.cpp  lab_age.py  lab_even.cpp  lab_even.h  lab_fibonacci.cpp  lab_hello.cpp  lab_leap.cpp  lab_leap.h  lab_recursion.cpp  lab_recursion.h  lab_reverse.cpp  lab_reverse.h  lab_reverse.py  lab_sqrt.cpp  lab_sqrt.h  lab_welcome.cpp
week-1---cplusplus-intro/Lecture/: CMakeLists.txt  lec_arrays.cpp  lec_const.cpp  lec_custom_exception.cpp  lec_error.cpp  lec_exception.cpp  lec_exception_culture.cpp  lec_exception_culture.py  lec_function.cpp  lec_function.py  lec_hello.py  lec_vector.cpp
week-1---cplusplus-intro/Testing/: CMakeLists.txt  test_age.cpp  test_even.cpp  test_fibonacci.cpp  test_hello.cpp  test_leap.cpp  test_recursion.cpp  test_reverse.cpp  test_sqrt.cpp  test_welcome.cpp
week-1---cplusplus-intro/Testing/helper/: codiotest  solutions
week-2---compiling/: CMakeLists.txt  README.md  main.cpp  passwords.cpp  passwords.h  print_two.cpp  print_two.h  validate.cpp
week-2---compiling/Lecture/: CMakeLists.txt  lec_CMakeLists.txt  lec_doubly_dependant.cpp  lec_doubly_dependant_fixed.cpp  lec_error.cpp  lec_error_fixed.cpp  lec_example.cpp  lec_print_two.h
week-2---compiling/Testing/: CMakeLists.txt  test_byhand.cpp  test_main.cpp  test_validate.cpp
week-2---compiling/Testing/helper/: codiotest
week-3---testing/: .gitmodules  README.md  input.h  lab_age.cpp  lab_age.h  lab_tax.cpp  lab_tax.h  lab_vowels.cpp  lab_vowels.h  test_tax.cpp  test_vowels_.cpp
week-3---testing/Lecture/: CMakeLists.txt  lec_example.h  lec_example_ten.h  lec_example_test.cpp  lec_main.cpp  lec_unit_test (copy).h  lec_unit_test.cpp  lec_unit_test.py  pre_unit_test.h  pre_unit_test.py
week-3---testing/Testing/: test_age.cpp  test_tax.cpp  test_vowels.cpp
week-3---testing/Testing/helper/: README.md  codiopytest  lab_age.h
week-3---testing/Testing/helper/captureio/: captureio.h
week-4---classes/: .gitmodules  README.md  a.out  ai1.h  ai2.h  ai3.h  ai4.h  ai5.h  ai6.h  aiyourturn.h  bankaccount.h  lab_ai1.cpp  lab_ai2.cpp  lab_ai3.cpp  lab_ai4.cpp  lab_ai5.cpp  lab_ai6.cpp  lab_bankaccount.cpp  lab_rectangle.cpp  lab_yourturn.cpp  labai3  labai4  labai5  name11  randomvalues.h  recta  rectangle.h
week-4---classes/.guides/tests/: TestAI3.py  TestAISection6.py  TestAISection8.py  TestAISection9.py  TestBankAccount1.py  TestBankAccount2.py  TestBankAccount3.py  TestPoint.py  TestRectangle.py  TestRectangleAgain.py  orgAI3.py
week-4---classes/Lecture/: CMakeLists.txt  jokes.txt  lec_basic.cpp  lec_car_database.cpp  lec_car_database.h  lec_car_database.py  lec_constructor.cpp  lec_creating.cpp  lec_permissions.cpp  lec_sep_concerns.cpp  lec_sep_concerns.h  lec_set_get.cpp  lec_static.cpp
week-4---classes/Testing/: CMakeLists.txt  test_ai3.py  test_bankaccount1.cpp  test_bankaccount2.cpp  test_bankaccount3.cpp  test_bankaccount4.cpp  test_rectangle.cpp  test_yourturn1.cpp  test_yourturn2.cpp
week-4---classes/Testing/helper/: cleanup  codiotest
week-6---pointers/: .codio  CMakeLists.txt  README.md  input.h  lab_adaptive.cpp  lab_adaptive.h  lab_adaptive.py  lab_dynamic.cpp  lab_dynamic.h  lab_pointer.cpp  lab_pointer.h  lab_smart.cpp  lab_smart.h  lab_values.cpp  lab_values.h  lab_vector.cpp  lab_vector.h  point
week-6---pointers/.guides/: gitrepo  prepointertest.sh  runcppleaker  runlabadaptive.sh  runsmart.sh  runvector.sh
week-6---pointers/Lecture/: CMakeLists.txt  lec_arithmetic.cpp  lec_bad.cpp  lec_iterators.cpp  lec_raii.cpp  lec_ref_function.cpp  lec_rule3.cpp  lec_rule3_correct.cpp  lec_rule5.cpp  lec_rule5_correct.cpp  lec_smart_pointers.cpp  lec_some_function.cpp  lec_some_function.py
week-6---pointers/Testing/: test_adaptive.cpp  test_dynamic.cpp  test_pointer.cpp  test_smart.cpp  test_vector.cpp
week-6---pointers/Testing/helper/: solutions
week-7---inheritance/: .gitignore  README.md  lab_animal1.cpp  lab_animal1.h  lab_animal2.cpp  lab_animal2.h  lab_animal3.cpp  lab_animal3.h  lab_animal4.cpp  lab_animal4.h  lab_animal5.cpp  lab_date.cpp  lab_date.h  lab_datetime.cpp  lab_datetime.h  lab_time.cpp  lab_time.h  lab_vehicles1.cpp  lab_vehicles1.h  lab_vehicles2.cpp  lab_vehicles2.h  lanim  lanim2  lanim3  lanim4
week-7---inheritance/.guides/tests/: TestAnimal3.py  TestTweety.py  TestUniDB.py
week-7---inheritance/Lecture/: CMakeLists.txt  lec_cout.cpp  lec_overwritting.cpp  lec_parent_access.cpp  lec_parent_init.cpp  lec_pure_virtual.cpp
week-7---inheritance/Testing/: test_animal1.cpp  test_animal2.cpp  test_animal3a.cpp  test_animal3b.cpp  test_animal4.cpp  test_animal5.cpp
week-7---inheritance/Testing/helper/: codiorun
